# rust-cli-template

./: Cargo.toml  todo.md
.github/workflows/: build.yml  template_values.toml
src/: cli.rs  lib.rs  main.rs
template/: Cargo.toml
template/src/: config.rs  errors.rs  lib.rs  main.rs
template/tests/: cli.rs
tests/: cli.rs
