[package]
name = "rust-cli-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
confy = "0.6.1"
exitcode = "1.1.2"
serde = { version = "1.0.199", features = ["derive"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
